// Auto-Generated by si-registry!
// Do not edit by hand!
// This means you! It won't last! You'll be sad!

syntax = "proto3";

package si.kubernetes_deployment;

import "google/protobuf/wrappers.proto";
import "si-registry/proto/si.component.proto";
import "si-registry/proto/si.data.proto";
import "si-registry/proto/si.entity.proto";
import "si-registry/proto/si.kubernetes.proto";

service KubernetesDeployment {
  rpc GetComponent(GetComponentRequest) returns (GetComponentReply);
  rpc PickComponent(PickComponentRequest) returns (PickComponentReply);
  rpc ListComponents(ListComponentsRequest) returns (ListComponentsReply);
  rpc CreateEntity(CreateEntityRequest) returns (CreateEntityReply);
  rpc ListEntities(ListEntitiesRequest) returns (ListEntitiesReply);
  rpc GetEntity(GetEntityRequest) returns (GetEntityReply);
  rpc SyncAction(SyncActionRequest) returns (SyncActionReply);
  rpc EditKubernetesObjectAction(EditKubernetesObjectActionRequest) returns (EditKubernetesObjectActionReply);
  rpc EditKubernetesObjectYamlAction(EditKubernetesObjectYamlActionRequest) returns (EditKubernetesObjectYamlActionReply);
}


message GetComponentRequest {
  google.protobuf.StringValue component_id = 1;
}

message GetComponentReply {
  Component component = 1;
}

message PickComponentRequest {
  Constraints constraints = 1;
}

message PickComponentReply {
  Constraints implicit_constraints = 1;
  Component component = 2;
}

message ListComponentsRequest {
  si.data.Query query = 1;
  google.protobuf.UInt32Value page_size = 2;
  google.protobuf.StringValue order_by = 3;
  si.data.PageTokenOrderByDirection order_by_direction = 4;
  google.protobuf.StringValue page_token = 5;
  google.protobuf.StringValue scope_by_tenant_id = 6;
}

message ListComponentsReply {
  Entity items = 1;
  google.protobuf.UInt32Value total_count = 2;
  google.protobuf.StringValue next_page_token = 3;
}

message CreateEntityRequest {
  Constraints constraints = 1;
  Properties properties = 2;
  google.protobuf.StringValue name = 3;
  google.protobuf.StringValue display_name = 4;
  google.protobuf.StringValue description = 5;
  google.protobuf.StringValue workplace_id = 6;
}

message CreateEntityReply {
  Entity entity = 1;
  EntityEvent entity_event = 2;
}

message ListEntitiesRequest {
  si.data.Query query = 1;
  google.protobuf.UInt32Value page_size = 2;
  google.protobuf.StringValue order_by = 3;
  si.data.PageTokenOrderByDirection order_by_direction = 4;
  google.protobuf.StringValue page_token = 5;
  google.protobuf.StringValue scope_by_tenant_id = 6;
}

message ListEntitiesReply {
  Entity items = 1;
  google.protobuf.UInt32Value total_count = 2;
  google.protobuf.StringValue next_page_token = 3;
}

message GetEntityRequest {
  google.protobuf.StringValue entity_id = 1;
}

message GetEntityReply {
  Entity entity = 1;
}

message SyncActionRequest {
  google.protobuf.StringValue entity_id = 1;
}

message SyncActionReply {
  Entity entity = 1001;
  EntityEvent entity_event = 1002;
}

message EditKubernetesObjectActionRequest {
  KubernetesObject kubernetes_object = 1001;
}

message EditKubernetesObjectActionReply {
  Entity entity = 1001;
  EntityEvent entity_event = 1002;
}

message EditKubernetesObjectYamlActionRequest {
  google.protobuf.StringValue kubernetes_object_yaml = 1001;
}

message EditKubernetesObjectYamlActionReply {
  Entity entity = 1001;
  EntityEvent entity_event = 1002;
}

message KubernetesObject {
  google.protobuf.StringValue api_version = 1001;
  google.protobuf.StringValue kind = 1002;
  si.kubernetes.Metadata metadata = 1003;
  KubernetesObjectSpec spec = 1004;
}

message KubernetesObjectSpec {
  google.protobuf.UInt32Value replicas = 1001;
  si.kubernetes.LabelSelector label_selector = 1002;
  si.kubernetes.PodTemplateSpec pod_template_spec = 1003;
}



message Component {
  google.protobuf.StringValue id = 1;
  google.protobuf.StringValue name = 2;
  google.protobuf.StringValue display_name = 3;
  si.data.Storable storable = 4;
  si.component.ComponentSiProperties component_si_properties = 5;
  Constraints constraints = 6;
}



message Entity {
  google.protobuf.StringValue id = 1;
  google.protobuf.StringValue name = 2;
  google.protobuf.StringValue display_name = 3;
  si.data.Storable storable = 4;
  si.entity.EntitySiProperties entity_si_properties = 5;
  Constraints constraints = 6;
  Constraints implicit_constraints = 7;
  Properties properties = 8;
}



message EntityEvent {
  google.protobuf.StringValue id = 1;
  si.data.Storable storable = 2;
  google.protobuf.StringValue action_name = 3;
  google.protobuf.StringValue create_time = 4;
  google.protobuf.StringValue updated_time = 5;
  google.protobuf.StringValue final_time = 6;
  google.protobuf.BoolValue finalized = 7;
  google.protobuf.BoolValue success = 8;
  si.entity_event.EntityEventSiProperties entity_event_si_properties = 9;
  Entity input_entity = 10;
  Entity output_entity = 11;
  Entity previous_entity = 12;
  google.protobuf.StringValue error_message = 13;
  repeated google.protobuf.StringValue error_lines = 14;
}





message KubernetesObject {
  google.protobuf.StringValue api_version = 1001;
  google.protobuf.StringValue kind = 1002;
  si.kubernetes.Metadata metadata = 1003;
  KubernetesObjectSpec spec = 1004;
}

message KubernetesObjectSpec {
  google.protobuf.UInt32Value replicas = 1001;
  si.kubernetes.LabelSelector label_selector = 1002;
  si.kubernetes.PodTemplateSpec pod_template_spec = 1003;
}


message ListComponentsRequest {
  si.data.Query query = 1;
  google.protobuf.UInt32Value page_size = 2;
  google.protobuf.StringValue order_by = 3;
  si.data.PageTokenOrderByDirection order_by_direction = 4;
  google.protobuf.StringValue page_token = 5;
  google.protobuf.StringValue scope_by_tenant_id = 6;
}

message ListComponentsReply {
  Entity items = 1;
  google.protobuf.UInt32Value total_count = 2;
  google.protobuf.StringValue next_page_token = 3;
}

message CreateEntityRequest {
  Constraints constraints = 1;
  Properties properties = 2;
  google.protobuf.StringValue name = 3;
  google.protobuf.StringValue display_name = 4;
  google.protobuf.StringValue description = 5;
  google.protobuf.StringValue workplace_id = 6;
}

message CreateEntityReply {
  Entity entity = 1;
  EntityEvent entity_event = 2;
}

message ListEntitiesRequest {
  si.data.Query query = 1;
  google.protobuf.UInt32Value page_size = 2;
  google.protobuf.StringValue order_by = 3;
  si.data.PageTokenOrderByDirection order_by_direction = 4;
  google.protobuf.StringValue page_token = 5;
  google.protobuf.StringValue scope_by_tenant_id = 6;
}

message ListEntitiesReply {
  Entity items = 1;
  google.protobuf.UInt32Value total_count = 2;
  google.protobuf.StringValue next_page_token = 3;
}

message GetEntityRequest {
  google.protobuf.StringValue entity_id = 1;
}

message GetEntityReply {
  Entity entity = 1;
}


message SyncActionRequest {
  google.protobuf.StringValue entity_id = 1;
}

message SyncActionReply {
  Entity entity = 1001;
  EntityEvent entity_event = 1002;
}

message EditKubernetesObjectActionRequest {
  KubernetesObject kubernetes_object = 1001;
}

message EditKubernetesObjectActionReply {
  Entity entity = 1001;
  EntityEvent entity_event = 1002;
}

message EditKubernetesObjectYamlActionRequest {
  google.protobuf.StringValue kubernetes_object_yaml = 1001;
}

message EditKubernetesObjectYamlActionReply {
  Entity entity = 1001;
  EntityEvent entity_event = 1002;
}

message KubernetesObject {
  google.protobuf.StringValue api_version = 1001;
  google.protobuf.StringValue kind = 1002;
  si.kubernetes.Metadata metadata = 1003;
  KubernetesObjectSpec spec = 1004;
}

message KubernetesObjectSpec {
  google.protobuf.UInt32Value replicas = 1001;
  si.kubernetes.LabelSelector label_selector = 1002;
  si.kubernetes.PodTemplateSpec pod_template_spec = 1003;
}


message GetComponentRequest {
  google.protobuf.StringValue component_id = 1;
}

message GetComponentReply {
  Component component = 1;
}

message PickComponentRequest {
  Constraints constraints = 1;
}

message PickComponentReply {
  Constraints implicit_constraints = 1;
  Component component = 2;
}


message Properties {
  KubernetesObject kubernetes_object = 1001;
  google.protobuf.StringValue kubernetes_object_yaml = 1002;
}

message KubernetesObject {
  google.protobuf.StringValue api_version = 1001;
  google.protobuf.StringValue kind = 1002;
  si.kubernetes.Metadata metadata = 1003;
  KubernetesObjectSpec spec = 1004;
}

message KubernetesObjectSpec {
  google.protobuf.UInt32Value replicas = 1001;
  si.kubernetes.LabelSelector label_selector = 1002;
  si.kubernetes.PodTemplateSpec pod_template_spec = 1003;
}


message Constraints {
  google.protobuf.StringValue component_name = 1;
  google.protobuf.StringValue component_display_name = 2;
  google.protobuf.StringValue kubernetes_version = 1001;
}
